[package]
name = "vix-repodownloadmanager"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls",
    "http2",
    "brotli",
    "gzip",
    "deflate",
    "stream",
    "charset",
    "json",
] }
hickory-resolver = "0.25"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dashmap = "6"
bytes = "1"
thiserror = "2"
anyhow = "1"
futures = "0.3"
tokio-util = "0.7"
rand = "0.8"
humantime = "2"
url = "2"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
indicatif = "0.17"
parking_lot = "0.12"
lru = "0.14"
sha2 = "0.10"
hex = "0.4"
